Trying to fix depecreation warning in Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,8 @@
 language: ruby
 rvm:
-  # - 1.9.3
-  # - 1.9.2
   - 2.0.0
   - 2.1.0
   - 2.2.0
-  # - ruby-head
-  # - jruby-19mode
-  # - jruby-head
 
 notifications:
   email:
@@ -17,3 +12,5 @@ notifications:
 script: SPEC_ALL=true bundle exec rspec spec
 before_install:
  - gem update bundler
+after_success:
+  - bundle exec codeclimate-test-reporter
