--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,5 @@
-LineLength:
-  Max: 120
+AllCops:
+  TargetRubyVersion: 2.0
 
 Style/SignalException:
   Enabled: false
@@ -27,6 +27,9 @@ Metrics/ClassLength:
 
 Metrics/ParameterLists:
   Enabled: false
+
+Metrics/LineLength:
+  Max: 120
 
 Metrics/MethodLength :
   Enabled: false
