Allow RedundantBlockCall for "explicity" reasons

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -117,3 +117,6 @@ Security/YAMLLoad:
 
 Naming/MemoizedInstanceVariableName:
   Enabled: false
+
+Performance/RedundantBlockCall:
+  Enabled: false
