--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: ruby
 
+cache: bundler
+
 rvm:
-  - 2.0.0
-  - 2.1.10
-  - 2.2.9
-  - 2.3.6
-  - 2.4.3
-  - 2.5.0
+  - 2.2.10
+  - 2.3.7
+  - 2.4.4
+  - 2.5.1
+
+before_install:
+  - gem update --system
 
 notifications:
   email:
@@ -21,9 +24,6 @@ env:
   - SPEC_ALL=true
 
 script: bundle exec rspec spec
-
-before_install:
-  - gem update bundler
 
 after_success:
   - bundle exec codeclimate-test-reporter
