--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: ruby
 
-cache: bundler
-
 rvm:
-  - 2.2.10
-  - 2.3.7
-  - 2.4.4
-  - 2.5.1
-
-# before_install:
-#  - gem update --system
+  - 2.0.0
+  - 2.1.10
+  - 2.2.9
+  - 2.3.6
+  - 2.4.3
+  - 2.5.0
 
 notifications:
   email:
@@ -23,7 +20,10 @@ gemfile:
 env:
   - SPEC_ALL=true
 
-# script: bundle exec rspec spec
+script: bundle exec rspec spec
+
+before_install:
+  - gem install bundler
 
 after_success:
   - bundle exec codeclimate-test-reporter
