Alright, found the "right" fix for bundler and travis
https://docs.travis-ci.com/user/languages/ruby/#bundler-20

Enough with random attempts

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ env:
 script: bundle exec rspec spec
 
 before_install:
-  - gem install bundler
+  - gem install bundler -v ‘< 2’
 
 after_success:
   - bundle exec codeclimate-test-reporter
