--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: ruby
 rvm:
   - 2.0.0
   - 2.1.10
-  - 2.2.9
-  - 2.3.6
-  - 2.4.3
-  - 2.5.0
+  - 2.2.10
+  - 2.3.7
+  - 2.4.4
+  - 2.5.1
 
 notifications:
   email:
@@ -23,6 +23,7 @@ env:
 script: bundle exec rspec spec
 
 before_install:
+  - gem update --system
   - gem install bundler -v '< 2'
 
 after_success:
