Execute Rails suite against multiple versions of Rails in CI
On Travis, we'll run the Rails test suite against all supported versions
of Rails. In order to avoid running too many jobs in Travis, we only run
each Rails version against a single Ruby version. The Ruby version for
each suite was determined by latest stable version compatible with the
Rails version. The [compatibility matrix on the fastruby blog][0] is a
good reference for this.

[0]: https://www.fastruby.io/blog/ruby/rails/versions/compatibility-table.html

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,21 @@ gemfile:
 env:
   - SPEC_ALL=true RAKE_TASK=spec
 
+jobs:
+  include:
+  - rvm: 2.2
+    gemfile: gemfiles/rails_4_2.gemfile
+    env: RAKE_TASK=rails_specs
+  - rvm: 2.5
+    gemfile: gemfiles/rails_5_2.gemfile
+    env: RAKE_TASK=rails_specs
+  - rvm: 2.6
+    gemfile: gemfiles/rails_6_0.gemfile
+    env: RAKE_TASK=rails_specs
+  - rvm: 3.0
+    gemfile: gemfiles/rails_6_1.gemfile
+    env: RAKE_TASK=rails_specs
+
 script: bundle exec rake "$RAKE_TASK"
 
 before_install:
