--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -8,7 +8,10 @@ jobs:
     strategy:
       matrix:
         ruby: ['2.4.4', '2.5.1', '2.6.3']
+        gemfile: ['Gemfile', 'Gemfile.aws-sdk-core-v2']
     runs-on: ubuntu-20.04
+    env:
+      BUNDLE_GEMFILE: ${{ matrix.gemfile }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
