Update Ruby versions on CI
The README says we support > 2.4, so I left 2.4 in there, even though
it's EOL.

--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -9,7 +9,7 @@ jobs:
     name: All Specs
     strategy:
       matrix:
-        ruby: ['2.4.4', '2.5.1', '2.6.3']
+        ruby: ['2.4', '2.5', '2.6', '2.7', '3.0']
         gemfile: ['Gemfile', 'gemfiles/aws_sdk_core_2.gemfile']
     runs-on: ubuntu-20.04
     services:
