lock rubocop to below 1.12 due to ruby 2.4 not being supported in higher versions

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,7 +23,7 @@ Metrics/AbcSize:
   # because codeclimate already give that for us with more details
   Enabled: false
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 125
 
 Style/Alias:
