--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -9,7 +9,7 @@ jobs:
     name: All Specs
     strategy:
       matrix:
-        ruby: ['2.4', '2.5', '2.6', '2.7', '3.0', '3.1', '3.2', '3.3']
+        ruby: ['2.7', '3.0', '3.1', '3.2', '3.3']
         gemfile: ['Gemfile', 'gemfiles/aws_sdk_core_2.gemfile']
     runs-on: ubuntu-20.04
     services:
@@ -34,17 +34,8 @@ jobs:
     name: Rails Specs
     strategy:
       matrix:
-        rails: ['4.2', '5.2', '6.0', '6.1', '7.0', '7.1']
+        rails: ['6.1', '7.0', '7.1']
         include:
-          - rails: '4.2'
-            ruby: '2.2'
-            gemfile: gemfiles/rails_4_2.gemfile
-          - rails: '5.2'
-            ruby: '2.5'
-            gemfile: gemfiles/rails_5_2.gemfile
-          - rails: '6.0'
-            ruby: '2.6'
-            gemfile: gemfiles/rails_6_0.gemfile
           - rails: '6.1'
             ruby: '3.0'
             gemfile: gemfiles/rails_6_1.gemfile
