--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         ruby: ['2.7', '3.0', '3.1', '3.2', '3.3']
-        gemfile: ['Gemfile', 'gemfiles/aws_sdk_core_2.gemfile']
+        gemfile: ['Gemfile']
     runs-on: ubuntu-24.04
     services:
       localstack:
