--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -9,7 +9,7 @@ jobs:
     name: All Specs
     strategy:
       matrix:
-        ruby: ['2.7', '3.0', '3.1', '3.2', '3.3']
+        ruby: ['2.7', '3.0', '3.1', '3.2', '3.3', '3.4']
         gemfile: ['Gemfile']
     runs-on: ubuntu-24.04
     services:
@@ -41,7 +41,7 @@ jobs:
     name: Rails Specs
     strategy:
       matrix:
-        rails: ['6.1', '7.0', '7.1']
+        rails: ['6.1', '7.0', '7.1', '7.2']
         include:
           - rails: '6.1'
             ruby: '3.0'
@@ -52,6 +52,9 @@ jobs:
           - rails: '7.1'
             ruby: '3.2'
             gemfile: gemfiles/rails_7_1.gemfile
+          - rails: '7.2'
+            ruby: '3.3'
+            gemfile: gemfiles/rails_7_2.gemfile
     runs-on: ubuntu-24.04
     env:
       BUNDLE_GEMFILE: ${{ matrix.gemfile }}
