--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -9,7 +9,7 @@ jobs:
     name: All Specs
     strategy:
       matrix:
-        ruby: ['2.7', '3.0', '3.1', '3.2', '3.3', '3.4']
+        ruby: ['3.0', '3.1', '3.2', '3.3', '3.4']
         gemfile: ['Gemfile']
     runs-on: ubuntu-24.04
     services:
