--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Start LocalStack
-        run: docker-compose up -d
+        run: docker compose up -d
 
       - name: Wait for LocalStack
         run: |
