--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Start LocalStack
         run: docker compose up -d
@@ -26,7 +26,7 @@ jobs:
           done
           '
 
-      - uses: ruby/setup-ruby@v1
+      - uses: ruby/setup-ruby@bbda85882f33075a3727c01e3c8d0de0be6146ce # v1.224.0
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
@@ -67,9 +67,9 @@ jobs:
       BUNDLE_GEMFILE: ${{ matrix.gemfile }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - uses: ruby/setup-ruby@v1
+      - uses: ruby/setup-ruby@bbda85882f33075a3727c01e3c8d0de0be6146ce # v1.224.0
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
