--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -7,7 +7,7 @@ jobs:
     name: All Specs
     strategy:
       matrix:
-        ruby: ['3.0', '3.1', '3.2', '3.3', '3.4']
+        ruby: ['3.1', '3.2', '3.3', '3.4']
         gemfile: ['Gemfile']
     runs-on: ubuntu-latest
     steps:
@@ -45,11 +45,8 @@ jobs:
     name: Rails Specs
     strategy:
       matrix:
-        rails: ['6.1', '7.0', '7.1', '7.2', '8.0']
+        rails: ['7.0', '7.1', '7.2', '8.0']
         include:
-          - rails: '6.1'
-            ruby: '3.0'
-            gemfile: gemfiles/rails_6_1.gemfile
           - rails: '7.0'
             ruby: '3.1'
             gemfile: gemfiles/rails_7_0.gemfile
