--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -45,20 +45,17 @@ jobs:
     name: Rails Specs
     strategy:
       matrix:
-        rails: ['7.0', '7.1', '7.2', '8.0']
+        rails: ['7.2', '8.0', '8.1']
         include:
-          - rails: '7.0'
-            ruby: '3.1'
-            gemfile: gemfiles/rails_7_0.gemfile
-          - rails: '7.1'
-            ruby: '3.2'
-            gemfile: gemfiles/rails_7_1.gemfile
           - rails: '7.2'
-            ruby: '3.3'
+            ruby: '3.2'
             gemfile: gemfiles/rails_7_2.gemfile
           - rails: '8.0'
-            ruby: '3.4'
+            ruby: '3.3'
             gemfile: gemfiles/rails_8_0.gemfile
+          - rails: '8.1'
+            ruby: '3.4'
+            gemfile: gemfiles/rails_8_1.gemfile
     runs-on: ubuntu-latest
     env:
       BUNDLE_GEMFILE: ${{ matrix.gemfile }}
