--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -70,3 +70,19 @@ jobs:
 
       - name: Run Rails specs
         run: bundle exec rake spec:rails
+
+  ci-success:
+    name: CI Success
+    runs-on: ubuntu-latest
+    if: always()
+    needs:
+      - all_specs
+      - rails_specs
+    steps:
+      - name: Check all jobs passed
+        if: |
+          contains(needs.*.result, 'failure') ||
+          contains(needs.*.result, 'cancelled') ||
+          contains(needs.*.result, 'skipped')
+        run: exit 1
+      - run: echo "All CI checks passed!"
