--- a/spec/integration/adapter_configuration/Gemfile
+++ b/spec/integration/adapter_configuration/Gemfile
@@ -1,7 +1,7 @@
 source 'https://rubygems.org'
 
-# Specify your gem's dependencies in shoryuken.gemspec
-gemspec
+# Load the base shoryuken gem
+gemspec path: '../../../'
 
 group :test do
   gem 'activejob'
@@ -9,9 +9,4 @@ group :test do
   gem 'multi_xml'
   gem 'simplecov'
   gem 'warning'
-end
-
-group :development do
-  gem 'pry-byebug'
-  gem 'rubocop'
 end
