cleanup renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -3,14 +3,9 @@
   "extends": [
     "config:recommended"
   ],
+  "minimumReleaseAge": "7 days",
   "github-actions": {
     "enabled": true,
     "pinDigests": true
-  },
-  "packageRules": [
-    {
-      "matchManagers": ["github-actions"],
-      "minimumReleaseAge": "7 days"
-    }
-  ]
+  }
 }
