--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -7,7 +7,7 @@ jobs:
     name: All Specs
     strategy:
       matrix:
-        ruby: ['3.1', '3.2', '3.3', '3.4']
+        ruby: ['3.2', '3.3', '3.4']
         gemfile: ['Gemfile']
     runs-on: ubuntu-latest
     steps:
