--- a/spec/integration/rails/rails_80/Gemfile
+++ b/spec/integration/rails/rails_80/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-gemspec path: '../../../'
+gemspec path: '../../../../'
 
 gem 'activejob', '~> 8.0'
 gem 'rails', '~> 8.0'
