--- a/spec/integration/rails/rails_72/Gemfile
+++ b/spec/integration/rails/rails_72/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-gemspec path: '../../../'
+gemspec path: '../../../../'
 
 gem 'activejob', '~> 7.2'
 gem 'rails', '~> 7.2'
