Group ruby/setup-ruby with ruby version updates in Renovate
This ensures that when Ruby version is updated, the setup-ruby
action is also updated in the same PR, avoiding CI failures
due to version unavailability.

--- a/renovate.json
+++ b/renovate.json
@@ -38,6 +38,14 @@
       ],
       "groupName": "Integration test dependencies",
       "description": "Group integration test Gemfiles together"
+    },
+    {
+      "description": "Group ruby/setup-ruby action with ruby version updates",
+      "matchPackageNames": [
+        "ruby/setup-ruby",
+        "ruby"
+      ],
+      "groupName": "ruby setup"
     }
   ]
 }
