Extract linting tools to separate Gemfile
Move yard-lint to Gemfile.lint to isolate non-execution dependencies
from the main Gemfile. This keeps linting dependencies independent
while still being tracked by Renovate.

--- a/renovate.json
+++ b/renovate.json
@@ -12,6 +12,7 @@
     "enabled": true,
     "managerFilePatterns": [
       "/(^|/)Gemfile$/",
+      "/(^|/)Gemfile\\.lint$/",
       "/\\.gemfile$/",
       "/(^|/)gems\\.rb$/",
       "/spec/gemfiles/.+\\.gemfile$/",
