Add shoryuken.gemspec to renovate includePaths
Include gemspec file for Renovate to track gem dependency updates.

--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,7 @@
     ".ruby-version",
     "Gemfile",
     "Gemfile.lint",
+    "shoryuken.gemspec",
     "spec/gemfiles/**",
     "spec/integration/**/Gemfile",
     ".github/workflows/**"
